  speeding up application start
  
2010-01-25:
- Modified LogStream to support logging from libfritz++ and main program.
  Introduced logging macros DBG, INF, ERR
- Added support for password saving using KWallet

2010-01-28:
- Added a ':' in logging messages for better readability
- Added support for libindicate-qt in CMakeLists.txt, introduced define INDICATEQT_FOUND
- Added "outgoingCall", "callConnected" and "callDisconnected" to KNotify
- Integrated KEventHandler into KFritzBoxWindow

2010-01-29:
- Implemented support for libindicate-qt, "missed calls" are notified via that way
- Added .desktop file

2010-01-30:	 
- Added application specific icons "incoming-call", "outgoing-call", "missed-call" and "new-call" 
- Renamed relevant occurences of kfritzbox to kfritz

2010-02-01:
- Some improvements to debian subdir
- Added configuration page "Phone books"
- Added configuration tab "MSN filter" on page "Fritz!Box"
- Added configuration option "Show log"
- First steps to integrate i18n support
- Fixed crash when reloading call history and phone book after configuration changes
- Replace the term "calllist" with "call history" on user interface
- Translated UI texts to german

2010-02-05:
- Closing kfritz main window now minimizes to systray 
- Passing window id to KWallet to remove warning
- Translated texts coming from libfritz++ to german

2010-02-07:
- Added message to status bar while reading data from Fritz!Box

2010-02-11:
- Moved log to a separate dialog, moved menu entry to help menu
- Fixed formatting of time at disconnect-notification
- Added call to libfritz to set up config dir (in most cases ~/.kde/share/apps/kfritz)

--> Release 0.0.1

2010-02-14:
- Fixed translation of "Missed calls" wrt. desktop indicator
- Fixed translation of "POTS" and "ISDN", which are strings sent from the FB
- Fixed translation of KNotify events
- Fixed a complier failure on systems without libindicate-qt-dev
